[gd_scene load_steps=58 format=3 uid="uid://bcsl8cqbwhdyg"]

[ext_resource type="Texture2D" uid="uid://cv7vs3dhkjnjh" path="res://models/units/archers/units/1/D_Idle.png" id="1_7l5hy"]
[ext_resource type="Script" path="res://units/archers/unit.gd" id="1_bqkc4"]
[ext_resource type="Texture2D" uid="uid://cqsb1h4k4upkg" path="res://models/units/archers/units/1/D_Attack.png" id="2_2hmke"]
[ext_resource type="Texture2D" uid="uid://x4rjifkj0pvn" path="res://models/units/archers/units/1/D_Preattack.png" id="3_dsr2n"]
[ext_resource type="Texture2D" uid="uid://2n3t1nmjgt2g" path="res://models/units/archers/units/1/S_Attack.png" id="5_gswul"]
[ext_resource type="Texture2D" uid="uid://b843n768dsroo" path="res://models/units/archers/units/1/S_Idle.png" id="6_jpddg"]
[ext_resource type="Texture2D" uid="uid://detofahn5rjwn" path="res://models/units/archers/units/1/S_Preattack.png" id="7_6p6he"]
[ext_resource type="Texture2D" uid="uid://cwkemnvthv4js" path="res://models/units/archers/units/1/U_Attack.png" id="8_jkt31"]
[ext_resource type="Texture2D" uid="uid://b1cmwo52wnanf" path="res://models/units/archers/units/1/U_Idle.png" id="9_gf617"]
[ext_resource type="Texture2D" uid="uid://c6u61in8gjmvl" path="res://models/units/archers/units/1/U_Preattack.png" id="10_mcss6"]
[ext_resource type="AudioStream" uid="uid://cgefjfqldx5cl" path="res://audio/sfx/shot.mp3" id="11_rqyjn"]
[ext_resource type="AudioStream" uid="uid://cpmwou3iw52qq" path="res://audio/sfx/bowstring.mp3" id="12_ig8ed"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6jynq"]
atlas = ExtResource("2_2hmke")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8yob"]
atlas = ExtResource("2_2hmke")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhgix"]
atlas = ExtResource("2_2hmke")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixv1p"]
atlas = ExtResource("2_2hmke")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3mw8"]
atlas = ExtResource("2_2hmke")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2g0x"]
atlas = ExtResource("2_2hmke")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqjik"]
atlas = ExtResource("1_7l5hy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7em0"]
atlas = ExtResource("1_7l5hy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbaes"]
atlas = ExtResource("1_7l5hy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk3xk"]
atlas = ExtResource("1_7l5hy")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx0k8"]
atlas = ExtResource("3_dsr2n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_531yj"]
atlas = ExtResource("5_gswul")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0n80"]
atlas = ExtResource("5_gswul")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k2n7"]
atlas = ExtResource("5_gswul")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr0eh"]
atlas = ExtResource("5_gswul")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjo47"]
atlas = ExtResource("5_gswul")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlrw8"]
atlas = ExtResource("5_gswul")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjdf0"]
atlas = ExtResource("6_jpddg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxuxm"]
atlas = ExtResource("6_jpddg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eji8u"]
atlas = ExtResource("6_jpddg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu3gw"]
atlas = ExtResource("6_jpddg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_heemx"]
atlas = ExtResource("7_6p6he")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_utmlp"]
atlas = ExtResource("8_jkt31")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytvp7"]
atlas = ExtResource("8_jkt31")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svw88"]
atlas = ExtResource("8_jkt31")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qsd8"]
atlas = ExtResource("8_jkt31")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yckyn"]
atlas = ExtResource("8_jkt31")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_liqb5"]
atlas = ExtResource("8_jkt31")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i41sc"]
atlas = ExtResource("9_gf617")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_602nd"]
atlas = ExtResource("9_gf617")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_paa8w"]
atlas = ExtResource("9_gf617")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxqf4"]
atlas = ExtResource("9_gf617")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wplra"]
atlas = ExtResource("10_mcss6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_82ogq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jynq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8yob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhgix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixv1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3mw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2g0x")
}],
"loop": false,
"name": &"D_Attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqjik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7em0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbaes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk3xk")
}],
"loop": true,
"name": &"D_Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx0k8")
}],
"loop": false,
"name": &"D_Preattack",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_531yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0n80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k2n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr0eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjo47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlrw8")
}],
"loop": false,
"name": &"S_Attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjdf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxuxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eji8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu3gw")
}],
"loop": true,
"name": &"S_Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_heemx")
}],
"loop": false,
"name": &"S_Preattack",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utmlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytvp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svw88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qsd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yckyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liqb5")
}],
"loop": false,
"name": &"U_Attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i41sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_602nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paa8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxqf4")
}],
"loop": true,
"name": &"U_Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wplra")
}],
"loop": false,
"name": &"U_Preattack",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_xb8u6"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["D_Attack"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Bowstring2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aajes"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["D_Idle"]
}

[sub_resource type="Animation" id="Animation_0tqvl"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["D_Preattack"]
}

[sub_resource type="Animation" id="Animation_xh0fv"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["S_Attack"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Bowstring2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vspjr"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["S_Idle"]
}

[sub_resource type="Animation" id="Animation_pl4l5"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["S_Preattack"]
}

[sub_resource type="Animation" id="Animation_0p3gl"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["U_Attack"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Bowstring2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6klga"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["U_Idle"]
}

[sub_resource type="Animation" id="Animation_a6jtm"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["U_Preattack"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28d2e"]
_data = {
"D_Attack": SubResource("Animation_xb8u6"),
"D_Idle": SubResource("Animation_aajes"),
"D_Preattack": SubResource("Animation_0tqvl"),
"S_Attack": SubResource("Animation_xh0fv"),
"S_Idle": SubResource("Animation_vspjr"),
"S_Preattack": SubResource("Animation_pl4l5"),
"U_Attack": SubResource("Animation_0p3gl"),
"U_Idle": SubResource("Animation_6klga"),
"U_Preattack": SubResource("Animation_a6jtm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mnypw"]
resource_local_to_scene = true

[node name="Archer" type="Node2D"]
script = ExtResource("1_bqkc4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.4013e-45, -8)
scale = Vector2(1.125, 1.125)
sprite_frames = SubResource("SpriteFrames_82ogq")
animation = &"D_Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28d2e")
}

[node name="Area2D" type="Area2D" parent="."]
editor_description = "This node is needed to get CollisionShape2D as a child in code to fix the bug where all archers have the same CollisionShape2D radius"
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mnypw")

[node name="Arrows" type="Node2D" parent="."]

[node name="SFX" type="Node2D" parent="."]

[node name="Shot2D" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("11_rqyjn")
volume_db = -20.0

[node name="Bowstring2D" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("12_ig8ed")
volume_db = -25.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
